--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,6 +1,7 @@
 body {
   font-family: Arial;
-  background-color: #ffe1cd;
+  font-weight: bold;
+  background-color: rgb(255, 255, 236);
 }
 
 .option {
@@ -28,4 +29,42 @@ body {
 
 .option img:active {
   transform: scale(1.3);
+}
+
+.scoreboard {
+  width: 320px;
+  background-color: #ffe1cd;
+  border-style:dashed;
+  border-width: 5px;
+  border-color: gray;
+  padding: 20px;
+}
+
+.picks {
+  line-height: 10px;
+  margin-top: 30px;
+  margin-bottom: 30px;
+}
+
+.your-pick span {
+  color: darkgoldenrod;
+}
+
+.comp-pick span {
+  color: red;
+}
+
+.scoreboard p {
+  margin: 2px;
+  font-size: 15px;
+}
+
+#score-tag {
+  font-size: 18px;
+  margin-bottom: 10px;
+}
+
+.result {
+  margin-top: 10px;
+  font-size: 30px;
 }
